Overhaul Action/skill system.